more water labels work

--- a/components/globals.yaml
+++ b/components/globals.yaml
@@ -197,6 +197,7 @@ global:
     text_visible_roads: true
     text_visible_buildings: true
     text_visible_addresses: true
+    text_visible_water_labels: true
     text_visible_pois_landuse: true        #false by default
     icon_visible_pois_landuse: true        #false by default
     text_visible_landuse_generic: true     #false by default
