--- a/tron-style.yaml
+++ b/tron-style.yaml
@@ -29,12 +29,16 @@ import:
 sources:
     mapzen:
         type: TopoJSON
-        url: https://tile.mapzen.com/mapzen/vector/v1/all/{z}/{x}/{y}.topojson?api_key=mapzen-n22UFkv
+        url: https://tile.mapzen.com/mapzen/vector/v1/all/{z}/{x}/{y}.topojson
+        url_params:
+            api_key: mapzen-n22UFkv
         rasters: [normals-elevation]
         max_zoom: 16
     normals-elevation:
         type: Raster
-        url: https://tile.mapzen.com/mapzen/terrain/v1/normal/{z}/{x}/{y}.png?api_key=mapzen-n22UFkv
+        url: https://tile.mapzen.com/mapzen/terrain/v1/normal/{z}/{x}/{y}.png
+        url_params:
+            api_key: mapzen-n22UFkv
         max_zoom: 15
 
     # Only enable this for local debug, should not be enabled for prod (app inserts these at runtime)
