--- a/layers/boundaries.yaml
+++ b/layers/boundaries.yaml
@@ -24,20 +24,7 @@ layers:
                     text:
                         priority: 2
                         visible: global.text_visible_admin
-                        text_source: global.ux_language_text_source
-                        # NOTE: there is a bug on feature order for country boundary names
-                        # text_source: |
-                        #     function() {
-                        #         if( feature['name:right'] && feature['name:left'] ) {
-                        #             if( feature['name:right'].includes(' ') || feature['name:left'].includes(' ') ) {
-                        #                 return feature['name'];
-                        #             } else {
-                        #                 return feature['name:left'] + '\n' + feature['name:right'];
-                        #             }
-                        #         } else {
-                        #             return feature['name'];
-                        #         }
-                        #     }
+                        text_source: global.ux_language_text_source_boundary_lines
                         text_wrap: 100px
                         font:
                             family: Aldrich
@@ -77,19 +64,7 @@ layers:
                     text-blend-order:
                         priority: 3
                         visible: global.text_visible_admin
-                        #text_source: global.ux_language_text_source
-                        text_source: |
-                            function() {
-                                if( feature['name:right'] && feature['name:left'] ) {
-                                    if( feature['name:right'].includes(' ') || feature['name:left'].includes(' ') ) {
-                                        return feature['name'];
-                                    } else {
-                                        return feature['name:right'] + '\n' + feature['name:left'];
-                                    }
-                                } else {
-                                    return feature['name'];
-                                }
-                            }
+                        text_source: global.ux_language_text_source_boundary_lines
                         text_wrap: 100px
                         offset: 10px
                         anchor: top
