--- a/components/globals.yaml
+++ b/components/globals.yaml
@@ -189,13 +189,23 @@ global:
     text_visible_roads: true
     text_visible_buildings: true
     text_visible_addresses: true
-    text_visible_pois_landuse: true        #false by default
-    icon_visible_pois_landuse: true        #false by default
+    label_visible_landuse_green: true
+    icon_visible_landuse_green: true
+    text_visible_landuse_green: true
+    label_visible_poi_landuse: true
+    icon_visible_poi_landuse: true
+    text_visible_poi_landuse: true
+    label_visible_poi_landuse_e: true
     icon_visible_poi_landuse_e: true
-    text_visible_landuse_generic: true     #false by default
+    text_visible_poi_landuse_e: true
+    text_visible_landuse_generic: true
+    label_visible_station: true
+    icon_visible_station: true
+    text_visible_station: true
     text_visible_island: true
-    text_visible_shields: true
+    text_visible_aerialway: true
     text_visible_airport_gate: true
+    text_visible_shields: true
     text_visible_exits: true
     label_visible_poi_landuse: true
 
